DataTest: address SonarLint findings (System.out → Logging, raw types, stale TODO)
The SonarLint scan flagged 12 issues on DataTest.java; this clears
the actionable ones and leaves the false positives.

- S106 (×4): replace System.out.println / System.out::println with
  Logging.log(Level.INFO, ...) so test output goes through the
  project's logger like the rest of the slowtest suite.

- S112 + Javadoc: produceVariableReport declared `throws Exception`.
  VariableReport.runReport actually throws only IOException and
  TemplateException; narrow to those and refresh the @throws tags.
  (Helper is currently uncalled; keeping it around as a diagnostic
  utility, just with a tighter signature.)

- S3740 (×4): drop the redundant `(Function<ListKey, List>) campaign::getSafeListFor`
  casts in getLstFilesForCampaign. CDOMObject.getSafeListFor is
  `<T> List<T> getSafeListFor(ListKey<T>)` and Stream<ListKey<CSE>>::map
  infers the target type without a cast — the raw casts were dead noise.

- S1135 + S125: drop the `// TODO Revert back to the below` plus the
  commented-out alternative assertion in orphanFilesTest. The TODO
  pointed at pathfinder_2e/core_rulebook/c_skills_situation.lst, which
  was historically orphaned; the file is now referenced from
  data/pathfinder_2e/core_rulebook/_.pcc:93 and the live assertEquals
  passes, so the TODO is finished. Also corrected the pasted-over
  "Flag any missing files" comment (this is the orphan test).

- Replace Collectors.toList() with the Java 16+ Stream.toList() in
  listFilesByExtension (incidental tidy-up the IDE applied).

Skipped: S5960 ("Remove this assertion from production code") on
the @Test methods is a Sonar mis-detection — DataTest IS the test
class, that's where assertions belong. Suppressing the rule per
file would be uglier than ignoring the false positive.